--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.dart linguist-detectable=true
+*.html linguist-detectable=false
 *.cpp linguist-detectable=false
 *.h linguist-detectable=false
 *.c linguist-detectable=false
